refactor(ui): 重构数据库节点显示逻辑
- 修改 DBNode 类，增加 dbSize 字段并调整构造函数
- 更新 JedisClusterClient 和 JedisPoolClient 中的 dbSize 方法返回类型
-调整 ReportController 和 ServerTabController 中的相关代码以适应新的 dbSize 返回类型
- 修改 Util 类中的 keyspaceParseDb 方法，返回值类型改为 Long