@@ -477,13 +477,13 @@ public class ServerTabController extends BaseKeyController<MainController> {
     private void initDBSelects() {
         ObservableList<DBNode> items = choiceBox.getItems();
         ThreadPool.getInstance().execute(() -> {
-            Map<Integer, String> map = this.redisClient.dbSize();
+            Map<Integer, Long> map = this.redisClient.dbSize();
             Platform.runLater(() -> {
-                for (Map.Entry<Integer, String> en : map.entrySet()) {
-                    items.add(new DBNode(en.getValue(), en.getKey()));
+                for (Map.Entry<Integer, Long> en : map.entrySet()) {
+                    items.add(new DBNode( en.getKey(),en.getValue()));
                 }
                 //默认选中第一个
-                choiceBox.setValue(choiceBox.getItems().get(0));
+                choiceBox.setValue(choiceBox.getItems().getFirst());
             });
         });
 
@@ -497,10 +497,10 @@ public class ServerTabController extends BaseKeyController<MainController> {
         DBNode selectedItem = choiceBox.getSelectionModel().getSelectedItem();
         ObservableList<DBNode> items= FXCollections.observableArrayList();
         ThreadPool.getInstance().execute(() -> {
-            Map<Integer, String> map = this.redisClient.dbSize();
+            Map<Integer, Long> map = this.redisClient.dbSize();
             Platform.runLater(() -> {
-                for (Map.Entry<Integer, String> en : map.entrySet()) {
-                    DBNode dbNode = new DBNode(en.getValue(), en.getKey());
+                for (Map.Entry<Integer, Long> en : map.entrySet()) {
+                    DBNode dbNode = new DBNode( en.getKey(),en.getValue());
                     items.add(dbNode);
                 }
                 choiceBox.setItems(items);
